# IsoGS-SLAM-cpp

./: .gitignore  .gitmodules  README.md  VISUALIZATION_GUIDE_CN.md  show_model_browser.py  启动指令
configs/replica/: splatam.py
cpp/: .gitignore  CMakeLists.txt  main.cpp  已完成功能清单.md  执行命令示例.md  未完成功能清单.md  项目框架结构.md
cpp/cmake/: FindLibTorch.cmake
cpp/cuda/: device_utils.cuh
cpp/cuda/kernels/: densify.cu  flat_loss.cu  iso_loss.cu  optimizer.cu  prune.cu  spatial_hash.cu
cpp/include/core/: camera.hpp  gaussian_model.hpp  types.hpp
cpp/include/datasets/: dataset_base.hpp  dataset_factory.hpp  replica_dataset.hpp  replica_v2_dataset.hpp  scannet_dataset.hpp  scannetpp_dataset.hpp  tum_dataset.hpp
cpp/include/losses/: flat_loss.hpp  iso_loss.hpp
cpp/include/meshing/: marching_cubes.hpp  mesh_extractor.hpp
cpp/include/rendering/: renderer.hpp
cpp/include/slam/: mapper.hpp  slam_loop.hpp  tracker.hpp
cpp/include/utils/: common_utils.hpp  eval.hpp  io.hpp  keyframe_selection.hpp  losses.hpp  mesh_eval.hpp  nvs_eval.hpp  optimizer.hpp  pointcloud.hpp  spatial_hash.hpp  trajectory_eval.hpp
cpp/include/viz/: final_viz.hpp  online_viz.hpp  visualizer.hpp
cpp/python_bindings/: viz_bindings.cpp
cpp/src/core/: camera.cpp  gaussian_model.cpp
cpp/src/datasets/: dataset_factory.cpp  replica_dataset.cpp  replica_v2_dataset.cpp  scannet_dataset.cpp  scannetpp_dataset.cpp  tum_dataset.cpp
cpp/src/losses/: flat_loss.cpp  iso_loss.cpp
cpp/src/meshing/: marching_cubes.cpp  mesh_extractor.cpp
cpp/src/rendering/: renderer.cpp
cpp/src/slam/: mapper.cpp  slam_loop.cpp  tracker.cpp
cpp/src/tools/: export_ply.cpp  gaussian_splatting.cpp  post_splatam_opt.cpp
cpp/src/utils/: common_utils.cpp  eval.cpp  io.cpp  keyframe_selection.cpp  mesh_eval.cpp  nvs_eval.cpp  optimizer.cpp  pointcloud.cpp  spatial_hash.cpp  trajectory_eval.cpp
cpp/src/viz/: final_viz.cpp  online_viz.cpp  visualizer.cpp
cpp/tests/: grad_check.cpp
python_ordinary/: README.md  SplaTAM_README_CN.md  output_browser.py  启动指令
python_ordinary/bash_scripts/: run_replica_all_scenes.sh  run_replica_eval_all.sh  run_replica_mesh_eval_all.sh
python_ordinary/configs/replica/: splatam.py
python_ordinary/configs/scannet/: splatam.py
python_ordinary/configs/tum/: splatam.py
python_ordinary/docs/: MESH_EXTRACTION_FAST_GUIDE.md  VISUALIZATION_GUIDE_CN.md
python_ordinary/scripts/: eval_mesh_geometry.py  eval_novel_view.py  export_ply.py  extract_mesh_fast.py  final_recon_cpp.py  online_recon_cpp.py  splatam.py
python_ordinary/utils/: eval_helpers.py
python_ordinary/日志/: Dec16_first_setup_baseline.md  Dec18_凌晨.md
scripts/: splatam.py
tests/: check_knn.py
utils/: eval_helpers.py
viz_scripts/: final_recon.py  online_recon.py
日志/: Dec15_idea_Gemini.html  Dec15_idea_Gemini.md  Dec17.md  Dec18_汇报.md  Dev17_v2.md
日志/Dec15_idea_Gemini_files/: destination  gtm.js.下载  js  m=_b  rs=AA2YrTvcKiXWli20h4OGSvUlhh1qh1qunA  saved_resource.html
